--- a/src/index.html
+++ b/src/index.html
@@ -25,18 +25,11 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div class="container" ng-controller="MainController as main">
-
+    <div ng-controller="MainController as main">
 
       <navbar></navbar>
 
       <content></content>
-
-
-      <div class="jumbotron">
-        <h1>Hi!</h1>
-
-      </div>
 
     </div>
     <!-- build:js(src) scripts/vendor.js -->
