--- a/src/index.html
+++ b/src/index.html
@@ -27,9 +27,7 @@
 
     <div ng-controller="MainController as main">
 
-      <navbar></navbar>
-
-      <content></content>
+      <shop></shop>
 
     </div>
     <!-- build:js(src) scripts/vendor.js -->
